delete ledger data
