# application/docs/swagger.json
@@ -538,6 +538,39 @@
                 }
             }
         },
+        "/api/v1/updateCrop": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "增加上链数据",
+                "parameters": [
+                    {
+                        "description": "crop",
+                        "name": "Crop",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/v1.Crop"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/app.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/app.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/updateDonating": {
             "post": {
                 "produces": [
